--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 </head>
 <body>
     <div id="box" class="box">
-        <h1 class="tittleh1">Press the Button!</h1>
-        <button id="mybtn">The Button</button>
+        <h1 class="tittleh1">Clique no Botão!</h1>
+        <button id="mybtn">Botão</button>
     </div>
 
     <div id="fireworks-container" class="fireworks-container"></div>
